--- a/libreria-web/MiMaster.Master
+++ b/libreria-web/MiMaster.Master
@@ -4,17 +4,75 @@
 
 <html>
 <head runat="server">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Bootstrap -->
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
     <form id="form1" runat="server">
-        <div>
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-            </asp:ContentPlaceHolder>
+        <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="Default.aspx">Libros</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="Default.aspx">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Favoritos.aspx">Favoritos</a>
+                        </li>
+                        <li class="nav-item">
+                            <%if (Seguridad.Validacion.SesionActiva(Session["usuarioIngresado"]) && Seguridad.Validacion.EsAdministrador(Session["usuarioIngresado"]))
+                                { %>
+                            <a class="nav-link" href="ListaLibros.aspx">Lista de libros</a>
+                            <%  } %>
+                        </li>
+
+                        <li class="nav-item">
+                            <%if (Seguridad.Validacion.SesionActiva(Session["usuarioIngresado"]))
+                                { %>
+                            <a class="nav-link" href="MiPerfil.aspx">Mi perfíl</a>
+                            <%  } %>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="d-flex">
+                    <%if (!Seguridad.Validacion.SesionActiva(Session["usuarioIngresado"]))
+                        { %>
+                    <a href="Login.aspx" class="btn btn-success me-3">Login</a>
+                    <a href="Registrar.aspx" class="btn btn-outline-success me-3">Registrarse</a>
+                    <%  }
+                        else
+                        { %>
+                    <asp:Button ID="btnSalir" CssClass="btn btn-outline-primary me-3" OnClick="btnSalir_Click" runat="server" Text="Salir" />
+                    <asp:Label ID="lblUsuario" runat="server" CssClass="text-light m-auto me-3" Text=""></asp:Label>
+                    <%  } %>
+
+                    <asp:Image ID="imgPerfil" runat="server" Style="height: 40px; width: 40px; border-radius: 50%; background-color: gray" CssClass="me-3" />
+                </div>
+
+            </div>
+        </nav>
+
+        <div class="container">
+            <hr />
+            <div>
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                </asp:ContentPlaceHolder>
+            </div>
         </div>
     </form>
+
+    <!-- java script -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- java script -->
 </body>
 </html>
