--- a/libreria-web/MiMaster.Master
+++ b/libreria-web/MiMaster.Master
@@ -9,6 +9,11 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Bootstrap -->
+
+    <!-- Estilos propios -->
+    <link href="Estilos/background.css" rel="stylesheet" />
+    <!-- Estilos propios -->
+
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
